==> terjeio/grblHAL/drivers/MSP430F5529/driver.c <==
#include <msp430.h>
#include "driver.h"
#include "serial.h"
#include "grbl/hal.h"
#include "grbl/grbl.h"
#include "grbl/limits.h"
#include "grbl/nuts_bolts.h"
#include "i2c.h"
#include "eeprom/eeprom.h"

static void stepperWakeUp ()
{
    stepperEnable((axes_signals_t){AXES_BITMASK});

    STEPPER_TIMER_CCR0 = 0xFFFF;        // Set a long initial delay,
    STEPPER_TIMER_CTL |= TACLR|MC0;     // start stepper ISR timer in up mode
    hal.stepper.interrupt_callback();   // and start the show
}

static void stepperGoIdle (bool clear_signals)
{
    STEPPER_TIMER_CTL &= ~(MC0|MC1);
    if(clear_signals) {
        set_step_outputs((axes_signals_t){0});
        set_dir_outputs((axes_signals_t){0});
    }
}

static void stepperCyclesPerTick (uint32_t cycles_per_tick)
{
    STEPPER_TIMER_CTL |= TACLR; // start in up mode
    STEPPER_TIMER_CCR0 = cycles_per_tick < (1UL << 16) ? (uint16_t)cycles_per_tick : 0xFFFF;
}

static void stepperPulseStart (stepper_t *stepper)
{
    if(stepper->dir_change)
        set_dir_outputs(stepper->dir_outbits);

    if(stepper->step_outbits.value) {
        set_step_outputs(stepper->step_outbits);
        PULSE_TIMER_CTL |= TACLR|MC0;
    }
}

static void stepperPulseStartDelayed (stepper_t *stepper)
{
    if(stepper->dir_change) {

        set_dir_outputs(stepper->dir_outbits);

        if(stepper->step_outbits.value) {
            next_step_outbits = stepper->step_outbits; // Store out_bits
            PULSE_TIMER_CCR0 = 50000;
            PULSE_TIMER_CCTL1 &= ~CCIFG;               // Clear and
            PULSE_TIMER_CCTL1 |= CCIE;                 // enable CCR1 interrupt.
            PULSE_TIMER_CTL |= TACLR|MC0;
        }

        return;
    }

    if(stepper->step_outbits.value) {
        set_step_outputs(stepper->step_outbits);
        PULSE_TIMER_CTL |= TACLR|MC0;
    }
}

static void limitsEnable (bool on, bool homing)
{
    if (on && settings.limits.flags.hard_enabled)
        LIMIT_PORT_IE |= HWLIMIT_MASK; // Enable Pin Change Interrupt
    else
        LIMIT_PORT_IE &= ~HWLIMIT_MASK; // Disable Pin Change Interrupt
}

static void spindle_set_speed (uint_fast16_t pwm_value)
{
    if (pwm_value == spindle_pwm.off_value) {
        pwmEnabled = false;
        if(settings.spindle.flags.pwm_action == SpindleAction_DisableWithZeroSPeed)
            spindle_off();
        if(spindle_pwm.always_on) {
            PWM_TIMER_CCR1 = spindle_pwm.off_value;
            PWM_TIMER_CCTL1 = settings.spindle.invert.pwm ? OUTMOD_6 : OUTMOD_2;
        } else
            PWM_TIMER_CCTL1 = settings.spindle.invert.pwm ? OUT : 0;
    } else {
        if(!pwmEnabled)
            spindle_on();
        pwmEnabled = true;
        PWM_TIMER_CCR1 = pwm_value;
        PWM_TIMER_CCTL1 = settings.spindle.invert.pwm ? OUTMOD_6 : OUTMOD_2;
    }
}

static void bitsSetAtomic (volatile uint_fast16_t *ptr, uint_fast16_t bits)
{
    _DINT();
    *ptr |= bits;
    _EINT();
}

static uint_fast16_t bitsClearAtomic (volatile uint_fast16_t *ptr, uint_fast16_t bits)
{
    _DINT();
    uint_fast16_t prev = *ptr;
    *ptr &= ~bits;
    _EINT();
    return prev;
}

static uint_fast16_t valueSetAtomic (volatile uint_fast16_t *ptr, uint_fast16_t value)
{
    _DINT();
    uint_fast16_t prev = *ptr;
    *ptr = value;
    _EINT();
    return prev;
}

static void settings_changed (settings_t *settings)
{
    PWM_TIMER_EX0 = settings->spindle.pwm_freq < 1000.0f ? TAIDEX_7 : TAIDEX_1;

    hal.driver_cap.variable_spindle = spindle_precompute_pwm_values(&spindle_pwm, 25000000UL / (PWM_TIMER_EX0 == TAIDEX_1 ? 4 : 16));

    if(IOInitDone) {

        stepperEnable(settings->steppers.deenergize);

        int16_t t = (uint16_t)(5.0f * (settings->steppers.pulse_microseconds - STEP_PULSE_LATENCY)) - 1;
        pulse_length = t < 2 ? 2 : t;
        if(hal.driver_cap.step_pulse_delay && settings->steppers.pulse_delay_microseconds > 0.0f) {
            t = (uint16_t)(5.0f * (settings->steppers.pulse_delay_microseconds - 2.0f));
            PULSE_TIMER_CCR1 = t < 2 ? 2 : t;
            hal.stepper.pulse_start = stepperPulseStartDelayed;
        } else
            hal.stepper.pulse_start = stepperPulseStart;

        PULSE_TIMER_CCR0 = pulse_length;

        if(hal.driver_cap.variable_spindle) {
            PWM_TIMER_CCR0 = spindle_pwm.period;
            PWM_TIMER_CCTL1 = settings->spindle.invert.pwm ? OUT : 0;   // Set PWM output according to invert setting and
            PWM_TIMER_CTL |= TACLR|MC0|MC1;                             // start PWM timer (with no pulse output)
            hal.spindle.set_state = spindleSetStateVariable;
        } else
            hal.spindle.set_state = spindleSetState;

        /*************************
         *  Control pins config  *
         *************************/

        control_signals_t control_ies;
        control_ies.mask = ~(settings->control_disable_pullup.mask ^ settings->control_invert.mask);

        CONTROL_PORT_IE &= ~HWCONTROL_MASK;         // Disable control pins change interrupt
        CONTROL_PORT_DIR &= ~HWCONTROL_MASK;         // Disable control pins change interrupt

        if(settings->control_disable_pullup.cycle_start)
            CONTROL_PORT_OUT &= ~CYCLE_START_PIN;
        else
            CONTROL_PORT_OUT |= CYCLE_START_PIN;

        if(settings->control_disable_pullup.feed_hold)
            CONTROL_PORT_OUT &= ~FEED_HOLD_PIN;
        else
            CONTROL_PORT_OUT |= FEED_HOLD_PIN;

        if(settings->control_disable_pullup.reset)
            CONTROL_PORT_OUT &= ~RESET_PIN;
        else
            CONTROL_PORT_OUT |= RESET_PIN;

        if(settings->control_disable_pullup.safety_door_ajar)
            CONTROL_PORT_OUT &= ~SAFETY_DOOR_PIN;
        else
            CONTROL_PORT_OUT |= SAFETY_DOOR_PIN;

        if(control_ies.cycle_start)
            CONTROL_PORT_IES &= ~CYCLE_START_PIN;
        else
            CONTROL_PORT_IES |= CYCLE_START_PIN;

        if(control_ies.feed_hold)
            CONTROL_PORT_IES &= ~FEED_HOLD_PIN;
        else
            CONTROL_PORT_IES |= FEED_HOLD_PIN;

        if(control_ies.reset)
            CONTROL_PORT_IES &= ~RESET_PIN;
        else
            CONTROL_PORT_IES |= RESET_PIN;

        if(control_ies.safety_door_ajar)
            CONTROL_PORT_IES &= ~SAFETY_DOOR_PIN;
        else
            CONTROL_PORT_IES |= SAFETY_DOOR_PIN;

        CONTROL_PORT_REN |= HWCONTROL_MASK;     // Enable pull-ups/pull-down,
        CONTROL_PORT_IFG &= ~HWCONTROL_MASK;    // clear any pending interrupt
        CONTROL_PORT_IE |= HWCONTROL_MASK;      // and enable control pins change interrupt

        /***********************
         *  Limit pins config  *
         ***********************/

        axes_signals_t limit_ies;

        limit_ies.mask = ~(settings->limits.disable_pullup.mask ^ settings->limits.invert.mask);

         if(settings->limits.disable_pullup.x)
             LIMIT_PORT_OUT &= ~X_LIMIT_PIN;
         else
             LIMIT_PORT_OUT |= X_LIMIT_PIN;

         if(settings->limits.disable_pullup.y)
             LIMIT_PORT_OUT &= ~Y_LIMIT_PIN;
         else
             LIMIT_PORT_OUT |= Y_LIMIT_PIN;

         if(settings->limits.disable_pullup.z)
             LIMIT_PORT_OUT &= ~Z_LIMIT_PIN;
         else
             LIMIT_PORT_OUT |= Z_LIMIT_PIN;

         if(limit_ies.x)
             LIMIT_PORT_IES &= ~X_LIMIT_PIN;
         else
             LIMIT_PORT_IES |= X_LIMIT_PIN;

         if(limit_ies.y)
             LIMIT_PORT_IES &= ~Y_LIMIT_PIN;
         else
             LIMIT_PORT_IES |= Y_LIMIT_PIN;

         if(limit_ies.z)
             LIMIT_PORT_IES &= ~Z_LIMIT_PIN;
         else
             LIMIT_PORT_IES |= Z_LIMIT_PIN;

         LIMIT_PORT_REN |= HWLIMIT_MASK;

         /**********************
          *  Probe pin config  *
          **********************/

          if(hal.driver_cap.probe_pull_up)
              PROBE_PORT_OUT |= PROBE_PIN;
          else
              PROBE_PORT_OUT &= ~PROBE_PIN;
          PROBE_PORT_REN |= PROBE_PIN;
    }
}

static bool driver_setup (settings_t *settings)
{
    /******************
     *  Stepper init  *
     ******************/

    STEP_PORT_DIR |= HWSTEP_MASK;
    DIRECTION_PORT_DIR |= HWDIRECTION_MASK;
    STEPPERS_DISABLE_DIR_XY |= STEPPERS_DISABLE_PIN_XY;
    STEPPERS_DISABLE_DIR_Z |= STEPPERS_DISABLE_PIN_Z;

    // Configure stepper driver timer

    STEPPER_TIMER_EX0 = TAIDEX_0; //
    STEPPER_TIMER_CTL &= ~(ID0|ID1|TAIFG);
    STEPPER_TIMER_CTL |= TACLR|TASSEL1;
    STEPPER_TIMER_CCTL0 |= CCIE;

    // Configure step pulse timer

    PULSE_TIMER_EX0 |= TAIDEX_4; // DIV 5
    PULSE_TIMER_CTL |= TACLR|TASSEL1; // for 0.2uS per count
    PULSE_TIMER_CCTL0 |= CCIE;

#ifdef CNC_BOOSTERPACK_A4998
    STEPPERS_VDD_DIR |= STEPPERS_VDD_BIT;
    STEPPERS_VDD_OUT |= STEPPERS_VDD_BIT;
#endif

   /****************************
    *  Software debounce init  *
    ****************************/

    if(hal.driver_cap.software_debounce)
        WDTCTL = WDT_ADLY_16;   // Watchdog timeout ~16ms

   /***********************
    *  Control pins init  *
    ***********************/

    CONTROL_PORT_DIR &= ~HWCONTROL_MASK;

   /*********************
    *  Limit pins init  *
    *********************/

    LIMIT_PORT_DIR &= ~HWLIMIT_MASK;

   /********************
    *  Probe pin init  *
    ********************/

    PROBE_PORT_DIR &= ~PROBE_PIN;
    if(hal.driver_cap.probe_pull_up) {
        PROBE_PORT_OUT |= PROBE_PIN;
        PROBE_PORT_REN |= PROBE_PIN;
    }

    /***********************
    *  Coolant pins init  *
    ***********************/

    COOLANT_FLOOD_DIR |= COOLANT_FLOOD_PIN;
    COOLANT_MIST_DIR |= COOLANT_MIST_PIN;

    if(hal.driver_cap.amass_level == 0)
        hal.stepper.cycles_per_tick = &stepperCyclesPerTickPrescaled;

   /******************
    *  Spindle init  *
    ******************/

    SPINDLE_ENABLE_DIR |= SPINDLE_ENABLE_PIN;
    SPINDLE_DIRECTION_DIR |= SPINDLE_DIRECTION_PIN;

    if((hal.driver_cap.variable_spindle)) {
        PWM_PORT_DIR |= PWM_PIN;
        PWM_SEL = PWM_PIN;
        PWM_TIMER_CTL |= TASSEL1;
        PWM_TIMER_EX0 = TAIDEX_3;
    } else
        hal.spindle.set_state = spindleSetState;

#ifdef HAS_KEYPAD

   /*********************
    *  I2C KeyPad init  *
    *********************/

    keypad_setup();

#endif

  // Set defaults

    IOInitDone = settings->version == 19;

    hal.settings_changed(settings);
    hal.stepper.go_idle(true);
    hal.spindle.set_state((spindle_state_t){0}, 0.0f);
    hal.coolant.set_state((coolant_state_t){0});

    return IOInitDone;
}

bool driver_init (void)
{
    // Systick timer setup, uses ACLK / 32

    SYSTICK_TIMER_EX0 |= TAIDEX_3;
    SYSTICK_TIMER_CTL |= TACLR|ID0|ID1|TASSEL__ACLK; // for 1mS per count
    SYSTICK_TIMER_CCR0 = 1;
    SYSTICK_TIMER_CCTL0 |= CCIE;

    serialInit();

    hal.info = "MSP430F5529";
    hal.driver_version = "210219";
    hal.driver_setup = driver_setup;
    hal.f_step_timer = 24000000;
    hal.rx_buffer_size = RX_BUFFER_SIZE;
    hal.delay_ms = driver_delay_ms;
    hal.settings_changed = settings_changed;

    hal.stepper.wake_up = stepperWakeUp;
    hal.stepper.go_idle = stepperGoIdle;
    hal.stepper.enable = stepperEnable;
    hal.stepper.cycles_per_tick = stepperCyclesPerTick;
    hal.stepper.pulse_start = stepperPulseStart;

    hal.limits.enable = limitsEnable;
    hal.limits.get_state = limitsGetState;

    hal.coolant.set_state = coolantSetState;
    hal.coolant.get_state = coolantGetState;

    hal.probe.get_state = probeGetState;
    hal.probe.configure = probeConfigure;

    hal.spindle.set_state = spindleSetStateVariable;
    hal.spindle.get_state = spindleGetState;
#ifdef SPINDLE_PWM_DIRECT
    hal.spindle.get_pwm = spindleGetPWM;
    hal.spindle.update_pwm = spindle_set_speed;
#else
    hal.spindle_update_rpm = spindleUpdateRPM;
#endif

    hal.control.get_state = systemGetState;

    hal.stream.read = serialGetC;
    hal.stream.write = serialWriteS;
    hal.stream.write_all = serialWriteS;
    hal.stream.get_rx_buffer_available = serialRxFree;
    hal.stream.reset_read_buffer = serialRxFlush;
    hal.stream.cancel_read_buffer = serialRxCancel;

#ifdef EEPROM_ENABLE
    i2c_init();
    i2c_eeprom_init();
#else
    hal.nvs.type = NVS_None;
#endif

    hal.set_bits_atomic = bitsSetAtomic;
    hal.clear_bits_atomic = bitsClearAtomic;
    hal.set_value_atomic = valueSetAtomic;
    hal.irq_enable = enable_irq;
    hal.irq_disable = disable_irq;

#ifdef HAS_KEYPAD
    hal.execute_realtime = process_keypress;
#endif

  // driver capabilities, used for announcing and negotiating (with Grbl) driver functionality

#ifdef SAFETY_DOOR_PIN
    hal.signals_cap.safety_door_ajar = On;
#endif
    hal.driver_cap.spindle_dir = On;
    hal.driver_cap.variable_spindle = On;
    hal.driver_cap.spindle_pwm_invert = On;
    hal.driver_cap.mist_control = On;
    hal.driver_cap.software_debounce = On;
    hal.driver_cap.step_pulse_delay = On;
    hal.driver_cap.amass_level = 3;
    hal.driver_cap.control_pull_up = On;
    hal.driver_cap.limits_pull_up = On;
    hal.driver_cap.probe_pull_up = On;

    __bis_SR_register(GIE); // Enable interrupts

    my_plugin_init();

    // no need to move version check before init - compiler will fail any signature mismatch for existing entries
    return hal.version == 8;
}

__interrupt void systick_isr (void)
{
    delay.ms = 0;
    SYSTICK_TIMER_CTL &= ~(MC0|MC1);
    if(delay.callback) {
        delay.callback();
        delay.callback = NULL;
    }
}
